[gd_scene format=3 uid="uid://bfshwoko470di"]

[ext_resource type="PackedScene" uid="uid://vrso6qncj1nm" path="res://examples/multiplayer-fps/characters/player.tscn" id="2_p13fk"]
[ext_resource type="Script" uid="uid://b7dcdxh4qdxwv" path="res://examples/multiplayer-fps/scripts/player-spawner.gd" id="3_c7rxg"]
[ext_resource type="Script" uid="uid://cwhvo44anvrlw" path="res://examples/multiplayer-fps/menu.gd" id="5_573tb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_m76yx"]

[sub_resource type="Sky" id="Sky_e76ss"]
sky_material = SubResource("ProceduralSkyMaterial_m76yx")

[sub_resource type="Environment" id="Environment_xhc6u"]
background_mode = 2
sky = SubResource("Sky_e76ss")

[node name="multiplayer-fps" type="Node" unique_id=436590645]

[node name="Environment" type="Node" parent="." unique_id=1569129913]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment" unique_id=934541928]
transform = Transform3D(0.5, 0.612372, -0.612372, 0, 0.707107, 0.707107, 0.866025, -0.353553, 0.353553, -6.7361, 8.77817, 3.88909)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="Environment" unique_id=631641533]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 14.3564, 8.86602)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment" unique_id=2106215519]
environment = SubResource("Environment_xhc6u")

[node name="Network" type="Node" parent="." unique_id=1593300601]

[node name="PlayerSpawner" type="Node" parent="Network" unique_id=255705867]
script = ExtResource("3_c7rxg")
player_scene = ExtResource("2_p13fk")

[node name="Map" type="Node" parent="." unique_id=1525437376]

[node name="CSGBox3D" type="CSGBox3D" parent="Map" unique_id=5043280]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4265747, -4.600196, -1.8263245)
use_collision = true
size = Vector3(48.022583, 8.0625, 44.772034)

[node name="Control" type="Control" parent="." unique_id=844985072]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_573tb")

[node name="ClientButton" type="Button" parent="Control" unique_id=896434966]
layout_mode = 0
offset_left = 230.0
offset_top = 121.0
offset_right = 360.0
offset_bottom = 158.0
text = "Login"

[node name="User" type="LineEdit" parent="Control" unique_id=1153221334]
layout_mode = 0
offset_left = 181.0
offset_top = 24.0
offset_right = 353.0
offset_bottom = 55.0

[node name="Password" type="LineEdit" parent="Control" unique_id=282987421]
layout_mode = 0
offset_left = 177.0
offset_top = 79.0
offset_right = 359.0
offset_bottom = 110.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=463232178]
_spawnable_scenes = PackedStringArray("uid://vrso6qncj1nm")
spawn_path = NodePath("../Network/PlayerSpawner")

[connection signal="pressed" from="Control/ClientButton" to="Control" method="_on_client_button_pressed"]
[connection signal="text_submitted" from="Control/User" to="Control" method="_on_user_text_submitted"]
[connection signal="text_submitted" from="Control/Password" to="Control" method="_on_password_text_submitted"]
